--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,8 +9,10 @@
     "Prontinho",
     "Roboto",
     "Testando",
+    "ambiente",
     "ar",
     "chamar",
+    "colocar",
     "come",
     "começar",
     "cuidado",
@@ -21,6 +23,7 @@
     "mais",
     "muito",
     "o",
+    "planta",
     "plantinhas",
     "precisar",
     "reguar",
