create services folders

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
   "cSpell.words": [
+    "Activite",
     "Buttom",
     "Confirmar",
+    "Cozinha",
+    "Enviroment",
     "Identifica",
     "Identificação",
     "Isfocused",
@@ -26,6 +29,7 @@
     "planta",
     "plantinhas",
     "precisar",
+    "quer",
     "reguar",
     "vamos",
     "wght"
