--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "Confirmar",
     "Cozinha",
     "Enviroment",
+    "Enviroments",
     "Identifica",
     "Identificação",
     "Isfocused",
@@ -12,6 +13,7 @@
     "Prontinho",
     "Roboto",
     "Testando",
+    "Todos",
     "ambiente",
     "ar",
     "chamar",
