--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,6 +14,8 @@ target 'plantManager' do
 
   pod 'RNSVG', :path => '../node_modules/react-native-svg'
 
+  pod 'lottie-react-native', :path => '../node_modules/lottie-react-native'
+
   target 'plantManagerTests' do
     inherit! :complete
     # Pods for testing
