create plant save screen

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "cSpell.words": [
     "Activite",
     "Buttom",
+    "Cadastrar",
     "Confirmar",
     "Cozinha",
     "Enviroment",
@@ -10,6 +11,7 @@
     "Identificação",
     "Isfocused",
     "Jost",
+    "Prantinha",
     "Prontinho",
     "Roboto",
     "Testando",
@@ -23,6 +25,7 @@
     "cuidado",
     "cuidamos",
     "cuidar",
+    "diga",
     "esqueca",
     "lembrar",
     "mais",
@@ -30,10 +33,12 @@
     "o",
     "planta",
     "plantinhas",
+    "plantmanager",
     "precisar",
     "quer",
     "reguar",
     "vamos",
+    "waterdrop",
     "wght"
   ]
 }
