--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,20 @@
 {
   "cSpell.words": [
     "Activite",
+    "Alterar",
     "Buttom",
     "Cadastrar",
     "Confirmar",
     "Cozinha",
+    "Ecolha",
     "Enviroment",
     "Enviroments",
+    "Escolha",
     "Identifica",
     "Identificação",
     "Isfocused",
     "Jost",
+    "Mudar",
     "Prantinha",
     "Prontinho",
     "Roboto",
@@ -25,10 +29,16 @@
     "cuidado",
     "cuidamos",
     "cuidar",
+    "datetimepicker",
     "diga",
     "esqueca",
+    "futuro",
+    "hor",
+    "horário",
+    "lembrado",
     "lembrar",
     "mais",
+    "melhor",
     "muito",
     "o",
     "planta",
@@ -37,6 +47,7 @@
     "precisar",
     "quer",
     "reguar",
+    "rio",
     "vamos",
     "waterdrop",
     "wght"
