--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.4",
+    "@react-native-community/datetimepicker": "^3.4.7",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "@types/react-native-vector-icons": "^6.4.6",
     "axios": "^0.21.1",
+    "date-fns": "^2.21.2",
     "lottie-react-native": "^4.0.2",
     "react": "17.0.1",
     "react-native": "0.64.0",
