--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,24 +4,29 @@
     "Alterar",
     "Buttom",
     "Cadastrar",
+    "Certo",
     "Confirmar",
     "Cozinha",
     "Ecolha",
     "Enviroment",
     "Enviroments",
     "Escolha",
+    "Fique",
     "Identifica",
     "Identificação",
     "Isfocused",
     "Jost",
     "Mudar",
+    "Obrigado",
     "Prantinha",
     "Prontinho",
     "Roboto",
     "Testando",
     "Todos",
+    "Tudo",
     "ambiente",
     "ar",
+    "bastante",
     "chamar",
     "colocar",
     "come",
@@ -31,6 +36,7 @@
     "cuidar",
     "datetimepicker",
     "diga",
+    "emogis",
     "esqueca",
     "futuro",
     "hor",
@@ -42,6 +48,7 @@
     "muito",
     "o",
     "planta",
+    "plantinha",
     "plantinhas",
     "plantmanager",
     "precisar",
@@ -49,6 +56,7 @@
     "reguar",
     "rio",
     "salvar",
+    "tranquilo",
     "vamos",
     "waterdrop",
     "wght"
