add styles in the my plants page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,10 +17,15 @@
     "Isfocused",
     "Jost",
     "Mudar",
+    "Myplants",
     "Obrigado",
+    "Pr",
     "Prantinha",
     "Prontinho",
+    "Próximas",
+    "Regadas",
     "Roboto",
+    "Storaged",
     "Testando",
     "Todos",
     "Tudo",
@@ -59,6 +64,7 @@
     "tranquilo",
     "vamos",
     "waterdrop",
-    "wght"
+    "wght",
+    "ximas"
   ]
 }
